refactor(parser): 解决编译问题