@@ -1,10 +1,10 @@
 ﻿package cn.chenyunlong.qing.service.llm.service.parser;
 
+import cn.chenyunlong.qing.service.llm.dto.parser.ParseResult;
 import cn.chenyunlong.qing.service.llm.entity.TransactionRecord;
 import org.junit.jupiter.api.Test;
 
 import java.io.InputStream;
-import cn.chenyunlong.qing.service.llm.dto.parser.ParseResult;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -14,8 +14,8 @@ public class CcbParserTest extends BaseParserTest {
     @Test
     public void testParseExcel() throws Exception {
         if (!resourceExists("ccb/excel/ccb_test.xls")) {
-            System.out.println("\u26a0\ufe0f 找不到建设银行测试文件: mock/ccb/excel/ccb_test.xls");
-            System.out.println("  请将匿名化后的建设银行交易明细 XLS 文件放入 src/test/resources/mock/ccb/excel/ccb_test.xls");
+            System.out.println("找不到建设银行测试文件: mock/ccb/excel/ccb_test.xls");
+            System.out.println("请将匿名化后的建设银行交易明细 XLS 文件放入 src/test/resources/mock/ccb/excel/ccb_test.xls");
             return;
         }
 
@@ -28,7 +28,7 @@ public class CcbParserTest extends BaseParserTest {
             assertFalse(records.isEmpty(), "解析结果不应为空");
             records.stream().limit(5).forEach(System.out::println);
 
-            TransactionRecord first = records.get(0);
+            TransactionRecord first = records.getFirst();
             assertNotNull(first.getTransactionTime(), "交易时间不应为空");
             assertNotNull(first.getAmount(), "金额不应为空");
             assertNotNull(first.getType(), "收支类型不应为空");
